Evaluate/run/run.err
Traceback (most recent call last):
  File "/home/jeffxie/Documents/test/test_program.py", line 1, in <module>
    list = input().split()
  File "<string>", line 1
    1 2
      ^
SyntaxError: unexpected EOF while parsing
